# quick-skeleton

./: .travis.ci  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: file_helper.rs  main.rs  models.rs  zipper.rs
